--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "backend/server.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "build" : "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "build" : "npm install && npm install --include=dev --prefix frontend && npm run build --prefix frontend",
     "start": "node backend/server.js"
   },
   "keywords": [],
